# esp32s3-copilot

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
components/copilot/: CMakeLists.txt  Kconfig  copilot_app.cpp  copilot_app.h  copilot_audio.cpp  copilot_audio.h  copilot_face_data.cpp  copilot_face_data.h  copilot_imu.cpp  copilot_imu.h  copilot_mqtt.cpp  copilot_mqtt.h  copilot_perf.cpp  copilot_perf.h  copilot_ui.cpp  copilot_ui.h  copilot_voice_ui.cpp  copilot_voice_ui.h  idf_component.yml
components/copilot_voice/: CMakeLists.txt  Kconfig  copilot_audio_out.cpp  copilot_audio_out.h  copilot_voice.cpp  copilot_ws_client.cpp  copilot_ws_client.h  idf_component.yml
components/copilot_voice/include/: copilot_voice.h
docs/: VOICE_ARCHITECTURE.md
main/: CMakeLists.txt  idf_component.yml  main.cpp
tools/: copilot_ctl.py  mosquitto.conf  mqtt_demo.py  mqtt_demo.sh  mqtt_protocol.md  mqtt_server.py  mqtt_server.sh  test_asr_client.py  test_tts_client.py  (+1 more)
tools/voice_backend/: config.yaml  main.py  pyproject.toml
tools/voice_backend/copilot_voice_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tools/voice_backend/src/: __init__.py
tools/voice_backend/src/session/: __init__.py  voice_session.py
tools/voice_backend/src/signaling/: __init__.py  server.py
tools/voice_backend/src/streaming/: __init__.py  ws_server.py
tools/voice_backend/src/volcano/: __init__.py  asr_client.py  sauc_asr_client.py  tts_client.py  unidirectional_tts_client.py
tools/voice_backend/src/webrtc/: __init__.py  peer.py
(+3 files in other folders)
