idf_component_register(
    SRCS
        "copilot_voice.cpp"
        "copilot_audio_out.cpp"
    INCLUDE_DIRS
        "include"
        "."
    PRIV_REQUIRES
        esp_timer
        freertos
        driver
        nvs_flash
        esp_http_client
    REQUIRES
        esp32_s3_touch_amoled_1_75
        esp_codec_dev
)
